--- a/csstekat4d.css
+++ b/csstekat4d.css
@@ -9,7 +9,7 @@ p {
 }
 
 body {
-    background-image: url(../../i.ibb.co/7CQZVb9/1ed3c2f697c661941bb3664926ff22cc.jpg);
+    background-image: url(https://tekat4d.pages.dev/1ed3c2f697c661941bb3664926ff22cc.jpg);
     background-color: black;
     background-repeat: no-repeat;
     background-position: center;
